# task-manager-c

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
include/: deftype.h  headers.h  proccesslib.h  task_manager.h
src/: deftype.c  main.c  task_manager.c
